--- a/booking.html
+++ b/booking.html
@@ -311,19 +311,9 @@
                     </div>
 
                     <div class="form-section">
-                      <h3 class="form-section-title">Extras</h3>
-                      <div class="addon-grid">
-                        <label class="addon-chip">
-                          <input type="checkbox" id="addonToothbrush" value="toothbrush">
-                          <span>Toothbrush (+₱25)</span>
-                        </label>
-                        <label class="addon-chip">
-                          <input type="checkbox" id="addonDematting" value="dematting">
-                          <span>De-matting (+₱80–250)</span>
-                        </label>
-                      </div>
+                      <h3 class="form-section-title">Notes for the Groomer</h3>
                       <div class="form-group">
-                        <label for="bookingNotes" class="form-label">Notes for the Groomer</label>
+                        <label for="bookingNotes" class="form-label">Special Requests & Preferences</label>
                         <textarea id="bookingNotes" class="form-textarea"
                           placeholder="Preferred cut, special reminders"></textarea>
                       </div>
